# feofetch

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: errors.rs  fetch.rs  main.rs  settings.rs
