[package]
name = "feofetch"
version = "0.1.0"
edition = "2024"

[dependencies]
battery = "0.7.8"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
os_info = "3.14.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
rustyline = "18.0.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
